# raw-requests

./: README.md  example.py  pyproject.toml
rawrequests/: __init__.py  core.py  exceptions.py
